--- a/index.html
+++ b/index.html
@@ -168,24 +168,23 @@
 
         /* Module 2: Dimensions - Redesigned Overview */
         .dimensions-overview {
-            background: linear-gradient(135deg, #f6f8fb 0%, #ffffff 100%);
-            border: 1px solid #e2e8f0;
-            border-radius: 12px;
-            padding: 32px;
-            margin-bottom: 20px;
             display: flex;
-            align-items: center;
-            gap: 40px;
+            align-items: stretch;
+            gap: 20px;
+            margin-bottom: 20px;
         }
 
         .average-score-box {
             flex-shrink: 0;
+            width: 200px;
             text-align: center;
-            padding: 24px;
+            padding: 32px 24px;
             background: white;
+            border: 1px solid #e2e8f0;
             border-radius: 12px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-            min-width: 180px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
 
         .average-score-value {
@@ -193,7 +192,7 @@
             font-weight: 700;
             color: #667eea;
             line-height: 1;
-            margin-bottom: 8px;
+            margin-bottom: 12px;
         }
 
         .average-score-label {
@@ -202,48 +201,40 @@
             font-weight: 500;
         }
 
-        .dimensions-highlights {
+        .dimensions-cards {
             flex: 1;
             display: flex;
             flex-direction: column;
             gap: 16px;
         }
 
-        .highlight-item {
+        .dimension-highlight-card {
             background: white;
-            padding: 20px 24px;
-            border-radius: 8px;
-            display: grid;
-            grid-template-columns: 100px 1fr 80px;
-            align-items: center;
-            gap: 20px;
+            border: 1px solid #e2e8f0;
+            border-radius: 12px;
+            padding: 20px 28px;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            flex: 1;
         }
 
-        .highlight-left {
-            text-align: left;
-        }
-
-        .highlight-label {
+        .dimension-highlight-label {
             font-size: 13px;
             color: #718096;
+            margin-bottom: 8px;
         }
 
-        .highlight-center {
-            text-align: center;
-        }
-
-        .highlight-dimension {
-            font-size: 28px;
+        .dimension-highlight-name {
+            font-size: 32px;
             font-weight: 700;
             color: #2d3748;
+            margin-bottom: 8px;
         }
 
-        .highlight-right {
-            text-align: right;
-        }
-
-        .highlight-score {
-            font-size: 20px;
+        .dimension-highlight-value {
+            font-size: 24px;
             font-weight: 600;
             color: #667eea;
         }
@@ -251,12 +242,13 @@
         .dimensions-insight {
             background: white;
             padding: 16px 20px;
-            border-radius: 8px;
+            border-radius: 12px;
+            border: 1px solid #e2e8f0;
             border-left: 4px solid #667eea;
             font-size: 14px;
             color: #4a5568;
             line-height: 1.7;
-            margin-top: 16px;
+            margin-bottom: 20px;
         }
 
         .dimensions-grid {
@@ -732,7 +724,6 @@
 
             .dimensions-overview {
                 flex-direction: column;
-                gap: 20px;
             }
 
             .average-score-box {
@@ -806,29 +797,17 @@
         <div class="average-score-label">班级平均分</div>
     </div>
 
-    <div class="dimensions-highlights">
-        <div class="highlight-item">
-            <div class="highlight-left">
-                <div class="highlight-label">最高维度</div>
-            </div>
-            <div class="highlight-center">
-                <div class="highlight-dimension">情绪觉察</div>
-            </div>
-            <div class="highlight-right">
-                <div class="highlight-score">78</div>
-            </div>
+    <div class="dimensions-cards">
+        <div class="dimension-highlight-card">
+            <div class="dimension-highlight-label">最高维度</div>
+            <div class="dimension-highlight-name">情绪觉察</div>
+            <div class="dimension-highlight-value">78</div>
         </div>
 
-        <div class="highlight-item">
-            <div class="highlight-left">
-                <div class="highlight-label">待提升维度</div>
-            </div>
-            <div class="highlight-center">
-                <div class="highlight-dimension">情绪调节</div>
-            </div>
-            <div class="highlight-right">
-                <div class="highlight-score">65</div>
-            </div>
+        <div class="dimension-highlight-card">
+            <div class="dimension-highlight-label">待提升维度</div>
+            <div class="dimension-highlight-name">情绪调节</div>
+            <div class="dimension-highlight-value">65</div>
         </div>
     </div>
 </div>
